--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,15 +17,15 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
-    <title>React App</title>
+    <title>Food</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
